# MFIS_Project

./: .gitignore  LICENSE  Preview Prezentare.md  Prezentare-outline.md  README.md  Raport.md  Testarea property-based folosind QuickCheck - cu arbore - redesign-all.pptx  Testarea property-based folosind QuickCheck - redesign-all - more-slides.pptx  Testarea property-based folosind QuickCheck - redesign-all.pptx  Testarea property-based folosind QuickCheck.pptx  mfis-quickcheck-expr.cabal  ~$Testarea property-based folosind QuickCheck.pptx
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.7/: mfis-quickcheck-expr-0.1.0.0-inplace.conf  package.cache
src/: Eval.hs  Expr.hs  Parser.hs  Pretty.hs  Simplify.hs
test/: Spec.hs
